--- a/app/src/main/res/layout/fragment_net_work.xml
+++ b/app/src/main/res/layout/fragment_net_work.xml
@@ -4,7 +4,17 @@
 
     <data>
 
-        <import type="com.lwang.smilejetpack.ui.network.NetWorkViewModel" />
+        <import type="me.goldze.mvvmhabit.binding.viewadapter.recyclerview.LayoutManagers" />
+
+        <import type="me.goldze.mvvmhabit.binding.viewadapter.recyclerview.LineManagers" />
+
+        <import type="com.lwang.smilejetpack.ui.network.adapter.NetWorkRecyclerViewBindingAdapter" />
+
+        <variable
+            name="adapter"
+            type="NetWorkRecyclerViewBindingAdapter" />
+
+        <import type="com.lwang.smilejetpack.ui.network.vm.NetWorkViewModel" />
 
         <variable
             name="viewModel"
@@ -16,16 +26,32 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-<!--        <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout-->
-<!--            android:id="@+id/twinklingRefreshLayout"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            binding:onLoadMoreCommand="@{viewModel.onLoadMoreCommand}"-->
-<!--            binding:onRefreshCommand="@{viewModel.onRefreshCommand}"-->
-<!--            binding:tr_head_height="80dp"-->
-<!--            binding:tr_wave_height="80dp">-->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="HelloWorld" />
 
-<!--        </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>-->
+        <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
+            android:id="@+id/twinklingRefreshLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            binding:onLoadMoreCommand="@{viewModel.onLoadMoreCommand}"
+            binding:onRefreshCommand="@{viewModel.onRefreshCommand}"
+            binding:tr_head_height="80dp"
+            binding:tr_wave_height="80dp">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                binding:adapter="@{adapter}"
+                binding:itemBinding="@{viewModel.itemBinding}"
+                binding:items="@{viewModel.observableList}"
+                binding:layoutManager="@{LayoutManagers.linear()}"
+                binding:lineManager="@{LineManagers.horizontal()}" />
+
+        </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
 
     </LinearLayout>
 </layout>
